# Ressursforvalter-med-Smarte-Pekere

./: CMakeLists.txt  README.md
include/: Resource.hpp  Utility.hpp
src/: main.cpp
